# Crane

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  autostart.sh  docker_run.sh
assets/int8/: quantized_model.xml
assets/openvino_model/: best.xml
assets/openvino_model_v1/: metadata.yaml
assets/openvino_model_v2/: metadata.yaml
assets/openvino_model_v3/: metadata.yaml
assets/openvino_model_v4/: best.xml  metadata.yaml
assets/openvino_model_v5/: metadata.yaml
assets/openvino_model_v6/: best.xml  metadata.yaml
configs/: usbcamera.yaml
examples/: capture.cpp  cboard_rotate_test.cpp  cboard_test.cpp  cboard_tx_test.cpp  localizer_test.cpp  matcher_test.cpp  solver_test.cpp  t_cam2gripper_test.cpp  usbcamera_detect.cpp  usbcamera_test.cpp  weights_detect.cpp
io/: CMakeLists.txt  camera.cpp  cboard.hpp  command.hpp  socketcan.hpp
io/cboard/: cboard.cpp  cboard.hpp
io/crane/: crane.cpp  crane.hpp
io/usbcamera/: usbcamera.cpp  usbcamera.hpp
src/: crane.cpp  crane.hpp  dual.cpp  main.cpp  simple.cpp
tasks/auto_crane/: CMakeLists.txt  decider.cpp  decider.hpp  landmark.hpp  localizer.cpp  localizer.hpp  matcher.cpp  matcher.hpp  solver.cpp  solver.hpp  weight_matcher.cpp  weight_matcher.hpp  yolov8.cpp  yolov8.hpp
tasks/yolo/: CMakeLists.txt  yolov8.cpp  yolov8.hpp
tools/: CMakeLists.txt  extended_kalman_filter.cpp  extended_kalman_filter.hpp  math_tools.cpp  math_tools.hpp  plotter.cpp  plotter.hpp  thread_safe_queue.hpp
